<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_custom_off">Off</string>
    <string name="accessibility_custom_on">On</string>
    <string name="accessibility_custom_view">Accessibility/Custom View</string>
    <string name="accessibility_custom_view_instructions">"1. Enable TalkBack (Settings -> Accessibility -> TalkBack). 

2. Enable Explore-by-Touch (Settings -> Accessibility -> Explore by Touch). 

3. Touch explore/poke the buttons."</string>
    <string name="accessibility_node_provider">Accessibility/Accessibility Node Provider</string>
    <string name="accessibility_node_provider_instructions">Enable TalkBack and Explore-by-touch from accessibility settings. Then touch the colored squares.</string>
    <string name="accessibility_query_window">Accessibility/Accessibility Node Querying</string>
    <string name="accessibility_query_window_description">Task App Accessibility Service</string>
    <string name="accessibility_query_window_instructions">"1. Enable QueryBack (Settings -> Accessibility -> QueryBack). 

2. Enable Explore-by-Touch (Settings -> Accessibility -> Explore by Touch). 

3. Touch explore the list."</string>
    <string name="accessibility_query_window_label">QueryBack</string>
    <string name="accessibility_service">Accessibility/Accessibility Service</string>
    <string name="accessibility_service_instructions">"1. Enable TalkBack (Settings -> Accessibility -> TalkBack). 

2. Enable Explore-by-Touch (Settings -> Accessibility -> Explore by Touch). 

3. Touch explore the Clock application and the home screen. 

4. Go to the Clock application and change the time of an alarm. 

5. Enable ClockBack (Settings -> Accessibility -> ClockBack). 

6. Go to the Clock application and change an alarm. 

7. Set the ringer to vibration mode and change an alarm. 

8. Set the ringer to muted mode and change an alarm."</string>
    <string name="accessibility_service_label">ClockBack</string>
    <string name="action_bar_add">Add</string>
    <string name="action_bar_display_options">App/Action Bar/Display Options</string>
    <string name="action_bar_edit">Edit</string>
    <string name="action_bar_mechanics">App/Action Bar/Action Bar Mechanics</string>
    <string name="action_bar_search">Search</string>
    <string name="action_bar_settings">Settings</string>
    <string name="action_bar_settings_action_provider">App/Action Bar/Action Provider/Settings Action Provider</string>
    <string name="action_bar_settings_action_provider_no_handling">Handling in onOptionsItemSelected avoided</string>
    <string name="action_bar_share">Share</string>
    <string name="action_bar_share_action_provider">App/Action Bar/Action Provider/Share Action Provider</string>
    <string name="action_bar_share_with">Share with...</string>
    <string name="action_bar_sort">Sort</string>
    <string name="action_bar_sort_alpha">Alphabetically</string>
    <string name="action_bar_sort_size">By size</string>
    <string name="action_bar_tabs">App/Action Bar/Action Bar Tabs</string>
    <string name="action_bar_usage">App/Action Bar/Action Bar Usage</string>
    <string name="activate_encryption">Activate encryption</string>
    <string name="activity_alarm_controller">App/Alarm/Alarm Controller</string>
    <string name="activity_alarm_service">App/Alarm/Alarm Service</string>
    <string name="activity_alert_dialog">App/Alert Dialogs</string>
    <string name="activity_animation">App/Activity/Animation</string>
    <string name="activity_animation_fade">Fade in</string>
    <string name="activity_animation_msg">Press a button to launch an activity with a custom animation.</string>
    <string name="activity_animation_zoom">Zoom in</string>
    <string name="activity_clipboard">Content/Clipboard/Data Types</string>
    <string name="activity_contacts_filter">App/Instrumentation/Contacts Filter</string>
    <string name="activity_custom_dialog">App/Activity/Custom Dialog</string>
    <string name="activity_custom_title">App/Activity/Custom Title</string>
    <string name="activity_dialog">App/Activity/Dialog</string>
    <string name="activity_external_storage">Content/Storage/External Storage</string>
    <string name="activity_finish_affinity">App/Activity/Finish Affinity</string>
    <string name="activity_foreground_service_controller">App/Service/Foreground Service Controller</string>
    <string name="activity_forwarding">App/Activity/Forwarding</string>
    <string name="activity_hello_world">App/Activity/<b>Hello <i>World</i></b></string>
    <string name="activity_install_apk">Content/Packages/Install Apk</string>
    <string name="activity_intent_activity_flags">App/Activity/Intent Activity Flags</string>
    <string name="activity_intents">App/Activity/Intents</string>
    <string name="activity_isolated_service_controller">App/Service/Isolated Service Controller</string>
    <string name="activity_local_sample">App/Instrumentation/Local Sample</string>
    <string name="activity_local_service_binding">App/Service/Local Service Binding</string>
    <string name="activity_local_service_controller">App/Service/Local Service Controller</string>
    <string name="activity_menu">App/Activity/Menu</string>
    <string name="activity_messenger_service_binding">App/Service/Messenger Service</string>
    <string name="activity_modern_animation_fade">Modern fade in</string>
    <string name="activity_modern_animation_zoom">Modern zoom in</string>
    <string name="activity_persistent">App/Activity/Persistent State</string>
    <string name="activity_pick_contact">Content/Provider/Pick Contact</string>
    <string name="activity_presentation">App/Activity/Presentation</string>
    <string name="activity_presentation_with_media_router">App/Activity/Presentation with Media Router</string>
    <string name="activity_read_asset">Content/Assets/Read Asset</string>
    <string name="activity_receive_result">App/Activity/Receive Result</string>
    <string name="activity_recreate">App/Activity/Recreate</string>
    <string name="activity_recreate_msg">Demonstration recreating an activity, to have it reconstructed with significant new changes. In this case the theme is changed.</string>
    <string name="activity_redirect">App/Activity/Redirection</string>
    <string name="activity_remote_service_binding">App/Service/Remote Service Binding</string>
    <string name="activity_remote_service_binding_options">App/Service/Remote Service Binding Options</string>
    <string name="activity_remote_service_controller">App/Service/Remote Service Controller</string>
    <string name="activity_reorder">App/Activity/Reorder Activities</string>
    <string name="activity_resources">Content/Resources/Resources</string>
    <string name="activity_resources_layout_reference">Content/Resources/Layout Reference</string>
    <string name="activity_resources_smallest_width">Content/Resources/Smallest Width</string>
    <string name="activity_resources_width_and_height">Content/Resources/Width and Height</string>
    <string name="activity_sample_code">API Demos</string>
    <string name="activity_sample_device_admin">App/Device Admin</string>
    <string name="activity_save_restore">App/Activity/Save &amp; Restore State</string>
    <string name="activity_scale_up_animation">Scale up</string>
    <string name="activity_screen_orientation">App/Activity/Screen Orientation</string>
    <string name="activity_secure_dialog">App/Activity/Secure Surfaces/Secure Dialog</string>
    <string name="activity_secure_surface_view">App/Activity/Secure Surfaces/Secure Surface View</string>
    <string name="activity_secure_window">App/Activity/Secure Surfaces/Secure Window</string>
    <string name="activity_service_start_arguments_controller">App/Service/Service Start Arguments Controller</string>
    <string name="activity_setwallpaper">App/Activity/SetWallpaper</string>
    <string name="activity_styled_text">Content/Resources/<i>Styled</i> <b>Text</b></string>
    <string name="activity_themes">Content/Resources/Themes</string>
    <string name="activity_translucent">App/Activity/Translucent</string>
    <string name="activity_translucent_blur">App/Activity/Translucent Blur</string>
    <string name="baseline_2_bigger">Bigger</string>
    <string name="baseline_2_button">Button</string>
    <string name="baseline_2_label">Label:</string>
    <string name="baseline_3_bigger">Bigger</string>
    <string name="baseline_3_button">Button</string>
    <string name="baseline_3_explanation">This example shows that baseline alignment has no effect when the layout gravity is set to center_vertical.</string>
    <string name="baseline_3_label">Label:</string>
    <string name="baseline_4_bigger">Bigger</string>
    <string name="baseline_4_button">Button</string>
    <string name="baseline_4_label">Label:</string>
    <string name="baseline_4_label_2">Label Again</string>
    <string name="baseline_4_label_3">Label Me</string>
    <string name="secure_view_overlay_button1">Totally safe, trust me...</string>
    <string name="secure_view_overlay_button2">Clicky?</string>
    <string name="secure_view_overlay_button3">Think of the penguins!</string>
    <string name="secure_view_overlay_description">A toast! A toast!</string>
</resources>