<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_gravity="bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="3.0dp" android:text="@string/baseline_2_label" android:contentDescription="@string/baseline_2_label" />
    <Button android:layout_gravity="bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="3.0dp" android:text="@string/baseline_2_button" android:contentDescription="@string/baseline_2_button" />
    <TextView android:textSize="20.0sp" android:layout_gravity="bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/baseline_2_bigger" android:contentDescription="@string/baseline_2_bigger" />
</LinearLayout>
